potentially last windows scrollbar fix commit

--- a/renderer/src/components/TextEditor/TextEditor.css
+++ b/renderer/src/components/TextEditor/TextEditor.css
@@ -86,6 +86,10 @@
   height: inherit;
 }
 
+.bottom-scrollbar {
+  background-color: #8CC0DE;
+}
+
 #editor-bottom-scrollbar {
   position: absolute;
   bottom: 0;
